--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,11 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    <color name="bg_color">#FCFEFF</color>
     <color name="primary_color">#1B2528</color>
+    <color name="secondary_color">#0094C6</color>
+    <color name="stroke_color">#D8DFE2</color>
+    <color name="secondary_text_color">#6C797E</color>
+    <color name="button_bg_color">#E6F0F3</color>
+
 </resources>
