--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -80,6 +80,7 @@
                         android:textSize="26sp" />
 
                     <com.google.android.material.card.MaterialCardView
+                        android:id="@+id/factCardView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
