fixed errors that prevented the project from being built correctly

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -53,4 +53,5 @@
     <color name="chip_selected_color">#BBDEFB</color>
     <color name="chip_text_color">#1B2528</color>
     <color name="chip_stroke_color">#1976D2</color>
+    <color name="categoryChipBackground">#E0E0E0</color>
 </resources>
