--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -205,8 +205,7 @@
             android:layout_width="64dp"
             android:layout_height="64dp"
             android:layout_marginBottom="16dp"
-            android:src="@drawable/ic_empty_news"
-            app:tint="?attr/colorOnSurfaceVariant" />
+            android:src="@drawable/ic_empty_news" />
 
         <TextView
             android:id="@+id/text_view_empty"
@@ -214,7 +213,6 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Нет новостей"
-            android:textColor="?attr/colorOnSurfaceVariant"
             android:textSize="16sp" />
 
     </LinearLayout>
