--- a/app/src/main/res/layout/item_fact.xml
+++ b/app/src/main/res/layout/item_fact.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="140dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/img" />
+            android:src="@drawable/img_1" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -36,7 +36,7 @@
                 android:maxLines="1"
                 android:textColor="@color/primary_color"
                 android:textSize="16sp"
-                tools:text="Honey Facts" />
+                tools:text="The dog Papillon" />
 
             <TextView
                 android:id="@+id/tvFactCategory"
@@ -51,7 +51,7 @@
                 android:paddingBottom="2dp"
                 android:textColor="@color/primary_color"
                 android:textSize="12sp"
-                tools:text="Food" />
+                tools:text="Animal" />
 
             <TextView
                 android:id="@+id/tvFactContent"
@@ -63,7 +63,7 @@
                 android:maxLines="2"
                 android:textColor="@color/primary_color"
                 android:textSize="14sp"
-                tools:text="Honey never spoils. Archaeologists have found pots of honey in ancient Egyptian tombs that are over 3,000 years old and still perfectly edible." />
+                tools:text="Papillons are considered one of the most ancient breeds of decorative dogs, appearing in the 16th century." />
 
             <LinearLayout
                 android:layout_width="match_parent"
